plugins {
    id 'java-library'
    id 'com.google.protobuf' version '0.9.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'kafka-proto'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    api 'io.grpc:grpc-protobuf:1.76.0'
    api 'io.grpc:grpc-stub:1.76.0'
    api 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    api 'org.slf4j:slf4j-api:2.0.16'
    compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // for @Generated
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.25.3'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.64.0'
        }
    }
    generateProtoTasks {
        all().each { task ->
            task.plugins {
                grpc {}
            }
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/java',
                    'build/generated/source/proto/main/grpc'
        }
    }
}
